# thesis

./: README.md  setup.sh
dummy/config/: LBR_calibration_eye_on_hand.yaml
launch_nodes/: CMakeLists.txt  package.xml  setup.py
launch_nodes/launch/: main.launch
matlab_com_test/: CMakeLists.txt  package.xml  setup.py
matlab_com_test/src/: test.py
matlab_scripts/: cosTest.m  finalSystem_test.m  joint_state_test.m  matlab_test.m  multitest.m  multithread_test.m  pegInAHoleTest.m  realtime_robot_pos_test.m  ros_robot_test.m  ros_test.m  string_test.m  vision_test.m
ontologies/: CMakeLists.txt  package.xml  setup.py
ontologies/src/ontologies/: ontologies.py
realsense-ros/realsense2_camera/launch/: rs_rgbd.launch
robot_comm/: CMakeLists.txt  package.xml  setup.py
robot_comm/src/: central_comm.py
service/: CMakeLists.txt  package.xml
service/srv/: ontologies_request.srv  pixel2world_request.srv  robot_request.srv  setobject_request.srv  vision_detect.srv
tf_virtual/: CMakeLists.txt  package.xml  setup.py
tf_virtual/launch/: ar_alvar.launch  calibrate_robot.launch  main.launch  robot_upload.launch
tf_virtual/src/: state_test.py
tf_virtual/urdf/: _d415.urdf.xacro  quick_tf.urdf.xacro
userInterface/: CMakeLists.txt  package.xml  setup.py
userInterface/src/userInterface/: userInterface.py
vision/: CMakeLists.txt  generateDataset.py  main.py  package.xml  setup.py
vision/pythonClasses/: acquireData.py  detectObjects.py  imageManipulation.py  segmentationInit.py
vision/pythonClasses/darknet/: Makefile  darknet_images.py
vision/pythonClasses/deeplab/: train.py  train_coco.sh
vision/pythonClasses/deeplab/dataloaders/datasets/: cityscapes.py  pascal.py  sbd.py
vision/src/vision/: generateDataset.py  generateDatasetObjectDetection.py  main.py  pixel_to_world.py
vision/src/vision/pythonClasses/: acquireData.py  detectObjects.py  imageManipulation.py  pointCloudProcessing.py  segmentationInit.py
vision/src/vision/pythonClasses/darknet/: bad.list  darknet.py  test.webm  video_yolov4.sh
vision/src/vision/pythonClasses/darknet/include/: darknet.h
vision/src/vision/pythonClasses/darknet/src/: dark_cuda.h
vision/src/vision/pythonClasses/deeplab/: inference.py  train.py  train.txt  train_voc.sh
vision/src/vision/pythonClasses/deeplab/dataloaders/: utils.py
vision/src/vision/pythonClasses/deeplab/dataloaders/datasets/: coco.py  combine_dbs.py  pascal.py
vision/src/vision/pythonClasses/deeplab/doc/: deeplab_resnet.py
vision/src/vision/pythonClasses/deeplab/modeling/: deeplab.py
vision/src/vision/pythonClasses/deeplab/modeling/backbone/: mobilenet.py
vision/src/vision/pythonClasses/deeplab/run/coco/deeplab-resnet/experiment_0/: events.out.tfevents.1607875213.gui-desktop  parameters.txt
vision/src/vision/pythonClasses/deeplab/utils/: metrics.py
